# astrostacker

./: .gitignore  GETTING_STARTED.txt  INSTALL_LINUX.txt  LICENSE  README.md  README_plain.txt  USER_MANUAL.txt  astrostacker.spec  build.sh  build_windows.bat  generate_icon.py  icon.icns  install_linux.sh  install_rpi.sh  make_manual_pdf.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml  build.yml
src/astrostacker/: __init__.py  config.py  main.py
src/astrostacker/alignment/: __init__.py  align.py
src/astrostacker/calibration/: __init__.py  calibrate.py  master_frames.py
src/astrostacker/gui/: __init__.py  about_dialog.py  background.py  blink_dialog.py  file_panel.py  fits_header_dialog.py  frame_status_bar.py  histogram_panel.py  main_window.py  mosaic_panel.py  news_ticker.py  platesolve_panel.py  postprocess_dialog.py  preview_panel.py  progress_panel.py  settings_panel.py  solve_result_window.py  splash.py  wizard.py
src/astrostacker/io/: __init__.py  fits_io.py  loader.py  xisf_io.py
src/astrostacker/mosaic/: mosaic.py  worker.py
src/astrostacker/pipeline/: __init__.py  pipeline.py  worker.py
src/astrostacker/platesolve/: __init__.py  solver.py  worker.py
src/astrostacker/stacking/: __init__.py  drizzle.py  methods.py  stacker.py
src/astrostacker/utils/: __init__.py  colour_balance.py  debayer.py  deconvolution.py  denoise.py  frame_quality.py  gradient.py  image_utils.py  parallel.py  psf.py  sounds.py  splash_audio.py  star_reduction.py  stretch.py
