[project]
name = "astrostacker"
version = "1.0.0"
description = "Astrophotography image stacking application"
requires-python = ">=3.9"
dependencies = [
    "PyQt6>=6.5",
    "numpy>=1.24",
    "scipy>=1.10",
    "astropy>=5.3",
    "xisf>=0.9.5",
    "astroalign>=2.5",
    "scikit-image>=0.21",
    "requests>=2.28",
]

[project.scripts]
astrostacker = "astrostacker.main:main"

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
